--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "resend-express-example",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "16.4.4",
     "express": "4.18.2",
     "resend": "latest"
   },
   "devDependencies": {
-    "@types/node": "20.11.19"
+    "@types/node": "^20.11.19"
   }
 }
