--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.4.4",
     "express": "4.18.2",
+    "express-rate-limit": "^7.5.0",
     "resend": "latest"
   },
   "devDependencies": {
